plugins {
    id 'java'
    id 'idea'
    id "org.jetbrains.kotlin.jvm" version "1.3.70"
}

group 'top.abosen'
version '1.0'

// 手动设置 preview 版本
sourceCompatibility = '1.14--enable-preview'

repositories {
    maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
    mavenCentral()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}


// 混用source目录
sourceSets {
    main.kotlin.srcDirs += 'src/main/java'
    main.java.srcDirs += 'src/main/java'
}

compileKotlin{
    kotlinOptions {
        freeCompilerArgs += ["-Xjsr305=strict"]
        jvmTarget = "1.8"
    }
}


idea {
    module {
        excludeDirs += file("src/main/java/leetcode/editor/cn/doc")
    }
}
dependencies {
    // jackson
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.3'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.3'
    // 测试
    implementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation group: 'junit', name: 'junit', version: '4.12'
    implementation 'org.hamcrest:hamcrest:2.2'
    testImplementation 'org.hamcrest:hamcrest:2.2'
    // kotlin 标准库
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}
